--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -9,12 +9,13 @@ $line-height-base: 1.6;
 
 // Colors
 $white:#FFFFFF;
-$blue: #0F358E;
+$second-white:#FEFEFE;
+$blue: #2A3890;
 $light-blue: #0DBEFF;
 $medium-blue: #3975BB;
 $dark-blue: #030F27;
 $red-one: #fa2b56;
 $red-two: #f91c3d;
-$grey: #595F6F;
+$grey: #222222;
 
 $border-radius:8px;
