--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -4,31 +4,42 @@
 @import "fontawsome";
 @import "~bootstrap/scss/bootstrap";
 
-body{
+body {
     color: $grey;
     font-size: 18px;
     font-weight: normal;
 }
-h1, h2{
+
+h1,
+h2 {
     color: $blue;
 }
-.color-primary{
-    color:$blue;
+
+.color-primary {
+    color: $blue;
 }
-header{
-    .icon-wrapper{
+
+header {
+    .icon-wrapper {
         background: $light-blue;
         padding: .5rem 1rem;
         color: $white;
         border-radius: 50%;
     }
-    nav{
+
+    nav {
         background: $light-blue;
         padding: 1rem;
     }
 }
-main{
+
+main {
     #form-section {
         background: $light-blue;
+
+        .spinner-border {
+            width: 1rem;
+            height: 1rem;
+        }
     }
 }
